--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JINX-ecommerce</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"  />
     <link rel="stylesheet" href="style.css">
 </head>
@@ -34,6 +34,17 @@
                  <div class="cart-count">0</div></div>
             </div>
          </header>
+         
+        <div class="category-container">
+          <ul>
+            <i class="fa-solid fa-bars hidden"></i>
+            <li class="active">Home</li>
+            <li>Men's Clothing</li>
+            <li>Jewelery</li>
+            <li>Women's Clothing</li>
+            <li>Electronics</li>
+          </ul>
+     </div>
 
          <div class="slider">
             <div class="slide-1 slide">
@@ -63,9 +74,7 @@
               </div>
          </div>
 
-     <div class="category-container">
-      
-     </div>
+  
          <div class="products">
          <!-- <div class="product">
             <div class="image">
