Added footer and logical add to cart,favourites functionality using js

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <div class="main">
 
+      <div class="shortCut hidden">
+        <div class="closeSlide">
+          <i class="fa-solid fa-xmark close-slide" onclick=`${closeSlide()}`></i>
+        <img src="assets/banner-1.jpg" alt="">
+         </div>
+      </div>
+
          <header class="shipping">
             <div class="header-icons">
                 <div class="icon"><i class="fa-brands fa-facebook"></i></div>
@@ -189,6 +196,42 @@
           <div class="p-price" style="font-weight: bold;">$48</div>
          </div> -->
          </div>
+
+
+<footer class="footer">
+  <div class="footer-container">
+    <div class="footer-brand">
+      <h2>MyBrand</h2>
+      <p>Building amazing things for amazing people.</p>
+    </div>
+
+    <div class="footer-links">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-social">
+      <h3>Follow Us</h3>
+      <div class="social-icons">
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 MyBrand. All rights reserved.</p>
+  </div>
+</footer>
+
+
         
 
 
