Eye feature added,cart.html created

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="user">  <i class="fa-regular fa-user"></i></div>
                 <div class="heart"> <i class="fa-regular fa-heart"></i>
                 <div class="heart-count">0</div></div>
-                <div class="cart">  <i class="fa-solid fa-cart-shopping"></i>
+                <div class="cart"> <a href="cart.html"> <i class="fa-solid fa-cart-shopping"></i></a>
                  <div class="cart-count">0</div></div>
             </div>
          </header>
