--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <div class="user">  <i class="fa-regular fa-user"></i></div>
                 <div class="heart"> <i class="fa-regular fa-heart"></i>
                 <div class="heart-count">0</div></div>
-                <div class="cart"> <a href="cart.html"> <i class="fa-solid fa-cart-shopping"></i></a>
-                 <div class="cart-count">0</div></div>
+                <div class="cart"> <a href="cart.html"> <i class="fa-solid fa-cart-shopping"></i>
+                 <div class="cart-count">0</div></a></div>
             </div>
          </header>
          
