favourites functionality completed with css

--- a/cart.html
+++ b/cart.html
@@ -9,23 +9,17 @@
 </head>
 <body>
     <div class="main">
-        <!-- <header class="shipping">
-            <div class="header-icons">
-                <div class="icon"><i class="fa-brands fa-facebook"></i></div>
-                <div class="icon"><i class="fa-brands fa-twitter"></i></div>
-                <div class="icon"><i class="fa-brands fa-instagram"></i></div>
-                <div class="icon"><i class="fa-brands fa-linkedin"></i></div>
-            </div>
-            <div class="header-content">Free Shipping This Week Order Over - Rs 5000</div>
-        </header> -->
+     
 
         <header class="search-menu">
             <div class="logo"><a href="index.html">jinx</a></div>
             <div class="menu">
+
                 <div class="user"><i class="fa-regular fa-user"></i></div>
-                <div class="heart"><i class="fa-regular fa-heart"></i>
-                    <div class="heart-count">0</div>
-                </div>
+
+                <div class="heart"> <a href="favourites.html"><i class="fa-regular fa-heart"></i>
+                <div class="heart-count">0</div></a></div>
+
                 <div class="cart"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i>
                     <div class="cart-count">0</div></a></div>
             </div>
