--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             </div>
             <div class="menu">
                 <div class="user">  <i class="fa-regular fa-user"></i></div>
-                <div class="heart"> <i class="fa-regular fa-heart"></i>
-                <div class="heart-count">0</div></div>
+                <div class="heart"> <a href="favourites.html"><i class="fa-regular fa-heart"></i>
+                <div class="heart-count">0</div></a></div>
                 <div class="cart"> <a href="cart.html"> <i class="fa-solid fa-cart-shopping"></i>
                  <div class="cart-count">0</div></a></div>
             </div>
